erDiagram
    SESSIONS ||--o{ CHAT_MESSAGES : holds
    SESSIONS ||--o{ MOOD_LOGS : tracks
    SESSIONS {
        string id PK
        datetime created_at
        string email
    }
    CHAT_MESSAGES {
        integer id PK
        string session_id FK
        string role
        string content
        string emotion_tag
        float sentiment_score
        string stress_severity
        string trauma_risk
        datetime timestamp
    }
    MOOD_LOGS {
        integer id PK
        string session_id FK
        integer score
        string notes
        datetime timestamp
    }
